fix: label and legend color change for contrast fix.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,7 +249,7 @@ footer {
 
 label,
 legend {
-    color: #456E4D;
+    color: #000000;
     padding: 0.5rem 0;
 }
 
